# Trip-Planner-using-CrewAI

./: .env.example  README.md  SETUP_GUIDE.md  analytics_dashboard.py  bucket_list_demo.py  bucket_list_fix_summary.md  cli_app.py  generate_all_feature_summary.md  pyproject.toml  sample_trip_plan.md  streamlit_app.py  test_pdf.py  test_pipeline.py  test_simplified.py  trip_agents.py  weave_logger.py  weave_logger_new.py
