[tool.poetry]
name = "trip-planner"
version = "0.1.0"
description = "AI Trip Planner using CrewAI and Gemini"
authors = ["Trip Planner Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
crewai = ">=0.141.0,<0.142.0"
streamlit = ">=1.29.0"
openai = ">=1.6.1"
unstructured = ">=0.11.0"
pyowm = ">=3.3.0"
langchain = ">=0.3.26,<0.4.0"
langchain-community = ">=0.3.27,<0.4.0"
langchain-core = ">=0.3.68,<0.4.0"
requests = ">=2.31.0"
fastapi = ">=0.109.0"
uvicorn = ">=0.27.0"
pydantic = ">=2.10"
python-dotenv = ">=1.0.0"
langchain-openai = ">=0.0.5"
tools = ">=0.1.9"
google-generativeai = ">=0.8.5,<0.9.0"
exa-py = ">=1.14.16,<2.0.0"
reportlab = ">=4.4.2,<5.0.0"
weave = ">=0.51.56,<0.52.0"
plotly = ">=5.15.0"
pandas = ">=2.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
